fixed code syntax

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="A brief description">
     <meta property="og:type"  content="website">
     <meta property="og:url"   content="https://www.mysite.com">
-    <meta property=og:description" content="A brief description">
+    <meta property="og:description" content="A brief description">
     <meta property="og:image" content="image.png">
    
 
